Fixed product list filtering fixed menu z-index issue

--- a/public/css/shortcode/header.css
+++ b/public/css/shortcode/header.css
@@ -85,7 +85,7 @@ Version: 1.0
   transition: all 0.3s ease 0s;
   visibility: hidden;
   width: 100%;
-  z-index: 2;
+  z-index: 3;
 }
 .mega-menu-area.mma-700 {
   width: 700px;
@@ -171,7 +171,7 @@ Version: 1.0
   position: fixed;
   top: 0;
   width: 100%;
-  z-index: 2;
+  z-index: 999;
 }
 .sticky .search-box {
   height: 75px;
